# level-synth

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  graph.json  imgui.ini  readme.md
editor/: application.cpp  application.hpp  command_history.hpp  editor.cpp  editor.hpp  imgui_visitor.hpp  main.cpp  phosphor_icons.hpp  platform_titlebar.hpp  platform_titlebar_mac.mm  platform_titlebar_other.cpp  platform_titlebar_win.cpp  tag_panel.cpp  tag_panel.hpp
editor/nodes/: node_builder.cpp  node_builder.hpp  node_colors.hpp  pin_icons.cpp  pin_icons.hpp
include/: application.hpp
samples/: cave_gen.cpp
source/: application.cpp  main.cpp
tests/: test_attribute_grid.cpp  test_grid.cpp  test_layered_grid.cpp  test_library.cpp  test_tags.cpp
tools/: font_to_header.py  icon.py  requirements.txt
